Fixed layout issues detected by automated tests.

--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,7 @@ body {
   color: #fff;
   text-transform: uppercase;
   font-size: 100px;
-  line-height: 0.8;
+  line-height: 1;
   letter-spacing: 0.3em;
   margin: 0;
 }
@@ -121,7 +121,7 @@ body {
   display: flex;
   align-items: center;
   gap: 78px;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .cover__description-text {
